overflow fixing

--- a/public_html/main/accountStyle.css
+++ b/public_html/main/accountStyle.css
@@ -162,5 +162,14 @@ tr {
 
 #bioTd {
     vertical-align: top;
+}
 
+#statusText{
+    max-width: 500px;
+    overflow-wrap: break-word;
+}
+
+#bioText{
+    max-width: 500px;
+    overflow-wrap: break-word;
 }
